0030855: Coding - New warnings within Standard_ReadLineBuffer after integration fix for 0030830

Added missing cast.